# clonenames

./: .gitattributes  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: linters.yaml
deployment/: DEPLOYMENT.md  nginx  sample.service
src/clonenames/: __init__.py  clonenames.py  web.py
src/clonenames/templates/: start.html
src/clonenames/wordlists/: builtin_functions  cardsagainsthumanity  codenames  codenames_deep_undercover  pokemon_gen1
